fix sidebar bug on mobile

--- a/src/app/styles/Sidebar.module.css
+++ b/src/app/styles/Sidebar.module.css
@@ -19,7 +19,7 @@
 }
 
 .open {
-    right: 0;
+    right: 0 !important;
 }
 
 .header {
@@ -285,6 +285,6 @@
     }
     
     .open {
-        right: 0;
+    right: 0 !important;
     }
 }
